--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^5.1.2",
     "@ngneat/transloco": "^6.0.0",
     "rxjs": "~7.8.0",
+    "theme-change": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
